# Joker-paper

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/cifar5m/: README.md
data/hepc/: README.md  make_hepc.py
data/higgs/: README.md  csv2npz.py
data/msd/: README.md  csv2npz.py
data/susy/: README.md  csv2npz.py
src/: experiments.py  joker.py  run_config.py  static_config.py
src/criterion/: __init__.py  collections.py
src/data/: __init__.py  blk.py
src/kernels/: fastfood.py  kernel.py
src/optim/: __init__.py  criterion.py  tncg.py  trust_region.py
src/task/: task.py
